atualizacao do projeto

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,30 @@
-<h1>Teia</h1>
-<app-teia-component></app-teia-component>
+<!-- app.component.html -->
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+      <a class="navbar-brand" href="#">Aplicativo</a>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/lista">Lista</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/agrupamento">Agrupamento</a>
+          </li>
+        </ul>
+        <!-- Espaçamento entre os links e o ícone do carrinho -->
+        <div class="nav-item">
+          <a class="nav-link" href=""></a>
+        </div>
+        <div class="nav-item">
+          <i class="fas fa-shopping-cart ml-2"></i> <!-- Espaçamento à esquerda do ícone -->
+        </div>
+      </div>
+    </div>
+  </nav>
+
+  <div class="container mt-4">
+    <!-- Onde os componentes correspondentes às rotas serão renderizados -->
+    <router-outlet></router-outlet>
+  </div>
+  
