--- a/src/app/projeto/teia-component/teia-component.component.html
+++ b/src/app/projeto/teia-component/teia-component.component.html
@@ -2,11 +2,11 @@
   <table class="table">
     <thead>
       <tr>
-        <th>albumId</th>
-        <th>id</th>
-        <th>title</th>
-        <th>url</th>
-        <th>thumbnailUrl</th>
+        <th>ALBUM</th>
+        <th>COD DA FOTO</th>
+        <th>TÍTULO</th>
+        <th>URL DA IMAGEM</th>
+        <th>TAMANHO DA IMAGEM</th>
       </tr>
     </thead>
     <tbody>
